--- a/src/app/components/errors/not-found/not-found.component.html
+++ b/src/app/components/errors/not-found/not-found.component.html
@@ -1,2 +1,3 @@
-<h1>Página nao encontrada</h1>
+<h1>Página não encontrada</h1>
 <button [routerLink]="['/user/list']"> Lista</button>
+<!-- NOT FOUND -->
